# study

./: .gitignore  README.md
codex/: codex.md
codex/01_todo_cli/: README.md  package.json  开发文档.md  需求文档.md
codex/01_todo_cli/src/: index.js
codex/01_todo_cli/src/commands/: add.js  done.js  list.js  remove.js
codex/01_todo_cli/src/config/: constants.js
codex/01_todo_cli/src/models/: taskModel.js
codex/01_todo_cli/src/services/: storageService.js  (+1 more)
cpp_study/: .gitignore
cpp_study/demo1/: CMakeLists.txt  main.cpp  readMe.md  watch.sh
cpp_study/demo1/src/: math.cpp  math.h
cpp_study/demo2/: CMakeLists.txt  build.sh  package.json  readMe.md  watch.sh
cpp_study/demo2/include/math/: Math.h
cpp_study/demo2/include/person/: Person.h
cpp_study/demo2/src/: main.cpp
cpp_study/demo2/src/math/: Math.cpp
cpp_study/demo2/src/person/: Person.cpp
database/: readMe.md
database/basic/: 01_create_table.sql  02_insert_data.sql  03_query_data.sql
demo/: 01.html
git/01/: README.md  index.html  story.txt
http/: 01.http
node_cpp/: readMe.md
node_cpp/01_ipc_demo/: README.md  package.json
node_cpp/01_ipc_demo/cpp/: worker  worker.cpp
node_cpp/01_ipc_demo/node/: app.js
ts-study/: .gitignore  package.json  readMe.md  tsconfig.json
ts-study/src/: index.ts
ts-study/src/demo02/: 01.ts
ts-study/src/demo_01_class-transformer/: 01.ts
typeScript/: 01.html  tsconfig.json
typeScript/src/: index.ts
typeScript/src/interface/: index.ts
vue3/: .gitignore  README.md
vue3/demo1/: README.md  package-lock.json  package.json
vue3/demo1/src/: App.vue
(+15 files in other folders)
